# composey

./: .gitignore  Goals.md  Makefile  README.md  REVIEW.md  pyproject.toml
.github/workflows/: acceptance.yml  ci.yml
bootstrap/: main.tf  outputs.tf  variables.tf
ci/: README.md  main.tf  outputs.tf  variables.tf
composey/: cli.py
composey/compiler/: __init__.py  generator.py  inference.py  normalizer.py  parser.py
composey/models/: aws.py  compose.py  environment.py  semantic.py  terraform.py
examples/build-webapp/: compose.yml
examples/build-webapp/app/: Dockerfile  app.py
examples/build-webapp/expected/: main.tf.json
examples/compute-tuning/: compose.yml
examples/doctor/: app.py  compose.yml
examples/flask/: compose.json
examples/flask-redis/: compose.yml
examples/flask-s3/: compose.yml
examples/hello/: compose.yml
examples/minio-s3/: compose.yml
examples/nginx-flask-mysql/: compose.yml
examples/production-stack/: compose.yml
examples/scaling/: compose.yml
scripts/: assert_s3.py  build_doctor.py  smoke-test.sh
src/: main.py
src/compiler/: __init__.py  generator.py  inference.py  normalizer.py  parser.py
src/models/: aws.py  environment.py  terraform.py
src/schema/: application.py  aws.py  compose.py  semantic.py  terraform.py
tests/: conftest.py  test_main.py  utils.py
tests/compiler/: test_normalize.py
tests/integration/: test_golden.py  test_localstack.py  test_validate.py
tests/model/: test_compose.py
tests/unit/: test_build.py  test_normalizer.py  test_parser.py  test_robustness.py
(+12 files in other folders)
